--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.5",
     "core-js": "^3.8.3",
+    "dotenv": "^8.2.0",
     "nuxt": "^2.14.12",
     "vuetify": "^2.4.4"
   },
