--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxtjs/axios": "^5.12.5",
     "core-js": "^3.8.3",
     "dotenv": "^8.2.0",
+    "moment": "^2.29.1",
     "nuxt": "^2.14.12",
     "vuetify": "^2.4.4"
   },
