--- a/package.json
+++ b/package.json
@@ -12,14 +12,11 @@
     "@nuxtjs/axios": "^5.12.5",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/moment": "^1.6.1",
+    "@nuxtjs/vuetify": "^1.11.3",
     "core-js": "^3.8.3",
-    "dotenv": "^8.2.0",
-    "moment": "^2.29.1",
-    "nuxt": "^2.14.12",
-    "vuetify": "^2.4.4"
+    "nuxt": "^2.14.12"
   },
   "devDependencies": {
-    "@nuxtjs/vuetify": "^1.11.3",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
     "prettier": "^2.2.1"
